add notes to medium1 q5

--- a/lesson_3/medium_1/q5.md
+++ b/lesson_3/medium_1/q5.md
@@ -23,3 +23,5 @@ My solution
 An error is returned because method `fib` creates it's own inner scope and does not recognize `limit` from the outer scope as a variable within it's own scope. 
 
 To fix this method, it's necessary to change `fib` to accept a new parameter `limit` and then pass the variable `limit` when invoking the function.
+
+=> `limit` is not visible in the scope of `fib` because `fib` is a method and does not have access to any local variables outside of its scope.
