add notes regarding argument to medium1 q5

--- a/lesson_3/medium_1/q5.md
+++ b/lesson_3/medium_1/q5.md
@@ -25,3 +25,7 @@ An error is returned because method `fib` creates it's own inner scope and does 
 To fix this method, it's necessary to change `fib` to accept a new parameter `limit` and then pass the variable `limit` when invoking the function.
 
 => `limit` is not visible in the scope of `fib` because `fib` is a method and does not have access to any local variables outside of its scope.
+
+Note
+---
+- to accept a new argument
